
[metadata]
name = drf-registration
author = Huy Chau
author-email = huy.chau@asnet.com.vn
description = User registration base on Django Rest Framework
description-file = README.md
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/huychau/drf-registration

[options]
include_package_data = True
python_requires = >=3.6
