
[metadata]
name = drf-registration
author = Huy Chau
author-email = huychau.dev@gmail.com
description = Simple user registration package based on Django Rest Framework. DRF Registration - The easy way to generate registration RESTful APIs.
description-file = README.md
long-description = file:README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/huychau/drf-registration

[options]
include_package_data = True
python_requires = >=3.6
